fixed scrollbar issue and removed comments

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,10 @@
 .main {
   min-height: 100vh;
-  width: 100vw;
+  max-width: 100vw;
   padding: 0rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  /* border: 5px solid red; */
 }
