--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,7 @@ html {
   color: white;
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+  overflow-x: hidden;
 }
 *,
 *:before,
@@ -118,8 +119,6 @@ button {
 @keyframes userOrbIn {
   0% {
     opacity: 0;
-    /* width: calc(100% / 10);
-    height: calc(100% / 10); */
   }
   50% {
     opacity: 0.3;
